# esp_mesh_fire_alarm

./: .gitignore  .gitmodules  CMakeLists.txt  Untitled Diagram.drawio  partitions_4mb.csv  partitions_8mb.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/ApiCaller/: ApiCaller.cpp
main/ApiCaller/include/: ApiCaller.hpp
main/Bluetooth/: Bluetooth.cpp
main/Bluetooth/include/: Bluetooth.hpp
main/Button/: Button.cpp
main/Button/include/: Button.hpp
main/Buzzer/: Buzzer.cpp
main/Buzzer/include/: Buzzer.hpp
main/Config/: ConstType.h  EventType.hpp
main/ExternalLibs/: SoftWire.cpp  sht31.c
main/ExternalLibs/include/: AsyncDelay.h  SoftWire.h  driver_sht31.h  sht31.h
main/Led/: Led.cpp
main/Led/include/: Led.hpp
main/Log/: Log.cpp
main/Log/include/: Log.hpp
main/Mesh/: Mesh.cpp  mesh_netif.c  mesh_netif_eth.c
main/Mesh/include/: Mesh.hpp  mesh_netif.h  mesh_netif_eth.h
main/Mqtt/: Mqtt.cpp
main/Mqtt/include/: Mqtt.hpp
main/Observer/: Observer.cpp
main/Observer/Log/: Log.cpp
main/Observer/include/: Observer.h
main/Refactor/: Refactor.cpp
main/Refactor/include/: Refactor.hpp
main/Relay/: Relay.cpp
main/Relay/include/: Relay.hpp
main/RocketScript/: RocketScript.cpp
main/RocketScript/include/: RocketScript.hpp
main/SNTP/: SNTP.cpp
main/SNTP/include/: SNTP.hpp
main/Screen/: Screen.cpp  lcd_native.c
main/Screen/include/: Screen.hpp  lcd_native.h
main/Sensor/: MQSensor.cpp  SHT31Sensor.cpp  Sensor.cpp
main/Storage/: Cache.cpp  Storage.cpp
main/Template/: Template.cpp
main/Utils/: Helper.cpp
(+8 files in other folders)
